    masks on Cairo-based devices has been removed.

7.  Fix for reinitialising gpar settings when pushViewport() then
    grid.newpage() WITHOUT up/popViewport().

8.  Clipping paths and masks are turned off (initially) when resolving
    a pattern.

9.  Stricter rules to disallow pattern, clipping path, mask, group, or
    path within clipping path or path.



Changes from grid_4.0.* to grid_4.1.0:
-------------------------------------

1.  Bug fix for grid.curve() with vertical or horizontal "curve".
    Thanks to Patrick Breheney for the report.

2.  Bug fix for grid.pack(side="[left|top]").
    Thanks to Deepayan Sarkar for the report.

3.  New editViewport() function.

4.  gpar(fill) can now be a linearGradient() or radialGradient() or 
    pattern().

5.  viewport(clip) can now be a grob (that defines a clipping path).

6.  New viewport(mask) argument that can be "none", "inherit", or
    a grob (that defines a mask).


Changes from grid_3.6.* to grid_4.0.0:
-------------------------------------

1.  upViewport() or popViewport() now correctly reverts to previous
    gpar() settings.  

    It used to always revert to previous viewport gpar() settings, 
    but that is wrong if we are coming out of a viewport that 
    is a 'childrenvp' of a gTree and the gTree has gpar() settings
    (in that case we should revert to the gTree gpar() settings).

    Reported by Nicolas Coutin.

2.  Internal reimplementation of units, thanks to Thomas Lin Pedersen,
    which makes operations on units MUCH faster.

    Only user-visible change is printing of results of unit arithmetic,
    which now always looks like a call to sum(), and a new unit.psum()
    function.

    Internally, there are now just "simpleUnit" and "unit" (no more
    "unit.arithmetic" and "unit.list").


Changes from grid_3.5.* to grid_3.6.0:
-------------------------------------

1.  New functions deviceLoc() and deviceDim().

2.  Improve handling of graphics devices in grid.grabExpr().